Fix gallery on safari

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -164,3 +164,6 @@ footer.footer
     p
       background: rgba(0, 0, 0, 0.5)
       width: 100%
+
+.react-photo-gallery--gallery > div
+  align-items: flex-start
